# models-dev-cli

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: update-homebrew.sh
src/: app.rs  data.rs  main.rs  ui.rs
