[package]
name = "models-dev-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tui-input = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["blocking"] }
nucleo-matcher = "0.3"
